learn-k8s/service/external.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-google
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ExternalName
  externalName: "google.com"
