learn-k8s/service/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-headless
spec:
  clusterIP: None
  selector:
    app: my-app
  ports:
  - name: http
    port: 80
    targetPort: 80
