learn-k8s/service/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 80
