learn-k8s/service/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-node-port
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 31000
  - name: redis
    port: 6379
    targetPort: 6379
    nodePort: 32000
