learn-k8s/service/service-cluster.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
  - name: nginx
    port: 80
    targetPort: 80
  type: ClusterIP
