learn-k8s/service/simple-service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-2
  namespace: backend
spec:
  selector:
    app: my-app-2
  ports:
  - name: nginx
    port: 80
    targetPort: 80
  type: ClusterIP
