learn-k8s/service/simple-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: my-app
  ports:
  - name: nginx
    port: 80
    targetPort: 80
  type: ClusterIP
